# hybird-kv

./: .gitignore  Cargo.toml  Makefile  kv-module.rs  readme.md
.github/workflows/: rust.yml
core/src/: main.rs
hkv-client/: Cargo.toml
hkv-client/src/: client.rs  pool.rs  resp.rs
hkv-client/tests/: client.rs
hkv-common/: Cargo.toml
hkv-common/src/: error.rs  ioctl.rs  lib.rs  protocol.rs  types.rs
hkv-engine/: Cargo.toml
hkv-engine/src/: engine.rs  lib.rs  memory.rs
hkv-gui/: Cargo.toml  index.html  package-lock.json  package.json
hkv-gui/src/: App.tsx  main.rs  main.tsx
hkv-gui/src-tauri/: Cargo.toml  tauri.conf.json
hkv-gui/src-tauri/src/: benchmark_manager.rs  commands.rs  info_poller.rs  main.rs  models.rs  run_repository.rs  server_manager.rs  state.rs
hkv-gui/src-tauri/src/runners/: mod.rs  redis_benchmark.rs
hkv-gui/src/__tests__/: api-types.test.ts  app-shell.test.tsx  benchmarks-page.test.tsx  bootstrap-shell.test.tsx  overview-page.test.tsx  runs-page.test.tsx  server-page.test.tsx  settings-page.test.tsx
hkv-gui/src/lib/: api.ts  contract-schema.json  format.ts  runtime-preferences.ts  types.ts
hkv-gui/src/routes/: Benchmarks.tsx  Config.tsx  HotKeys.tsx  Kernel.tsx  Overview.tsx  PlaceholderRoute.tsx  Runs.tsx  Server.tsx  Settings.tsx  (+1 more)
hkv-kernel/: Cargo.toml
hkv-server/: Cargo.toml
hkv-server/src/: lib.rs  main.rs  metrics.rs  observation.rs  protocol.rs  server.rs  tracker.rs
hkv-server/tests/: expanded.rs  hot_tracking.rs  hot_tracking_accuracy.rs  hotness_workloads.rs  metrics.rs  observation.rs  redis_cli.rs
(+32 files in other folders)
