[package]
name = "hkv-gui-desktop"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
hkv-client = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
